super quick loan; mostly just need to do the math now;